# blacksheep-template

./: .gitignore  README.md  dev-requirements.txt  docs-requirements.txt  pyproject.toml  requirements.txt  setup.cfg
src/: mkdocs.yml
src/app/: __about__.py  __init__.py  server.py
src/app/api/common/: __init__.py
src/app/api/v1/: __init__.py
src/app/api/v1/home/: __init__.py
src/app/domain/: app.py  common.py  internal.py
src/app/views/home/: index.jinja
src/docs/: domain.md  index.md  openapi.json  python_api.md
src/tests/: pytest.ini
src/tests/unit/: test_server.py
