[metadata]
name = blacksheep
version = attr: app.__about__.__version__
description = A template for Blacksheep framework-based API backends.
long_description = file: README.md
long_description_content_type = text/markdown
author = Zoltan Fabian
license = MIT
keywords = backend, blacksheep, template, api, rest
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
python_requires = >=3.8
install_requires =
    blacksheep
    gunicorn[setproctitle]
    uvicorn
    orjson

[options.extras_require]
dev =
    setuptools
    black[d]
    mypy
    mypy-extensions
    djlint
    coverage[toml]>=6.5
    pytest
    pytest-mock
    pytest-benchmark
    pytest-env
    pytest-pep8
    pytest-pycodestyle
    pytest-vscodedebug
    pytest-vscode-pycharm-cls
    blacksheep-cli
doc =
    pymdown-extensions
    neoteroi-mkdocs
    mkdocs
    mkdocstrings
    mkdocstrings-python
    mkdocs-material-extensions
    mkdocs-autorefs
    mkdocs-material
types =
    mypy>=1.0.0

[options.entry_points]
console_scripts =
    backsheepserve = app.server:main
    blacksheeptest = pytest {args} src/tests
    blacksheepcov = coverage run -m pytest {args} src/tests
    blacksheepreport = coverage combine && coverage report && coverage lcov -o lcov.info && coverage xml -o coverage.xml

[options.package_data]
* = README.md

[coverage:run]
source_pkgs = app
branch = True
parallel = True
omit = src/__about__.py, src/tests

[coverage:paths]
backend = */src/app/
tests = */src/tests/

[coverage:report]
exclude_lines =
    no cov
    if __name__ == .__main__.:
    if TYPE_CHECKING:

[mypy]
exclude = venv, tests

[pytest]
pythonpath = src
addopts = -ra -q -W ignore

[ruff]
format.preview = True
format.quote-style = double
lint.preview = True
lint.extend-select = C901
lint.extend-per-file-ignores =
    docs/.hooks/* = INP001, T201
    src/app/*.py = F401, PLC0415, FA100
lint.isort.known-first-party = []

